<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/simpleToast"
        style="@style/CustomButton"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/simple_toast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/topToast"
        style="@style/CustomButton"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/top_toast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simpleToast" />

    <Button
        android:id="@+id/topMarginToast"
        style="@style/CustomButton"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/top_margin_toast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topToast" />

    <Button
        android:id="@+id/leftToast"
        style="@style/CustomButton"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/left_toast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topMarginToast" />

    <Button
        android:id="@+id/leftMarginToast"
        style="@style/CustomButton"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/left_margin_toast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leftToast" />

    <Button
        android:id="@+id/customToast"
        style="@style/CustomButton"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/customToast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leftMarginToast" />

</androidx.constraintlayout.widget.ConstraintLayout>